<package>
   <name>map_msgs</name>
   <version>0.0.2</version>
   <description>This package defines messages commonly used in mapping packages.</description>
   <maintainer email="stephane@magnenat.net">Stéphane Magnenat</maintainer>

   <license>BSD</license>

   <url type="website">http://ros.org/wiki/map_msgs</url>
   <url type="bugtracker">https://github.com/ethz-asl/map_msgs/issues</url>

   <author>Stéphane Magnenat</author>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>

   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>

</package>
