<package>
   <name>map_msgs</name>
   <version>1.13.0</version>
   <description>
      This package defines messages commonly used in mapping packages.
   </description>
   <author>Stéphane Magnenat</author>
   <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
   <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>

   <license>BSD</license>
   <url type="website">http://ros.org/wiki/map_msgs</url>
   <url type="bugtracker">https://github.com/ros-planning/navigation_msgs/issues</url>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>

   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>

</package>
