<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>map_msgs</name>
    <version>2.0.2</version>
    <description>
        This package defines messages commonly used in mapping packages.
    </description>
    <author>Stéphane Magnenat</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

    <license>BSD</license>
    <url type="website">http://ros.org/wiki/map_msgs</url>
    <url type="bugtracker">https://github.com/ros-planning/navigation_msgs/issues</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>ament_lint_common</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
