<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>move_base_msgs</name>
    <version>2.0.2</version>
    <description>

        Holds the action description and relevant messages for the move_base package.

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author email="contradict@gmail.com">contradict@gmail.com</author>
    <author email="davidvlu@gmail.com">David V. Lu!!</author>
    <author email="mferguson@fetchrobotics.com">Michael Ferguson</author>
    <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
    <license>BSD</license>
    <url type="website">http://wiki.ros.org/move_base_msgs</url>
    <url type="bugtracker">https://github.com/ros-planning/navigation_msgs/issues</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>action_msgs</depend>
    <depend>geometry_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
